add api as env var

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-API_URL=h57,
-Api=https://hacker57.netlify.app/src/api/pokemon/pkmns1.json
+API_URL=https://animeweb-d093d-default-rtdb.firebaseio.com
