--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-videos": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.9",
     "typescript": "5.0.2"
   }
 }
